Fixed issue with devices not showing

--- a/applications/server/static/sass/_main.scss
+++ b/applications/server/static/sass/_main.scss
@@ -21,6 +21,17 @@ height:100%;
 }
 
 
+.selector{
+  h1 {
+	font-family: monospace;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+}
+}
+
 .border-c{
   background-color: #fff;
   padding: 2px;
